# bioread

./: .gitignore  .zenodo.json  CHANGELOG  COPYRIGHT  DISCLAIMER  LICENSE  README.md  README.textile  bioread_quick_demo.html  ez_setup.py  index.html  params.json  profile_output_post.prof  profile_output_pre.prof  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
bioread/: __init__.py  _metadata.py  biopac.py  data_reader.py  dtype_header_reader.py  file_revisions.py  header_reader.py  headers.py  journal_reader.py  marker_reader.py  reader.py  readers.py  struct_dict.py  version.py  writers.py
bioread/runners/: acq2hdf5.py  acq2mat.py  acq2txt.py  acq_info.py  acq_layout.py  acq_markers.py
bioread/writers/: matlabwriter.py  txtwriter.py
examples/: api_demo.py
notes/: channels.txt  file_format.md
src/biopac/: biopac_orig.py  writers.py
src/bioread/: __init__.py  biopac.py  file_revisions.py  file_versions.py  headers.py  readers.py  six.py  struct_dict.py  utils.py  version.py  writers.py
src/bioread/runners/: acq2mat.py  acq2txt.py  acq_info.py  acq_markers.py  acq_to_mat.py
src/tests/: main.py
src/tests/samples/: broken.acq  c1.acq  c1_compressed.acq  c1_fast.acq  c1_fast_w3.acq  c1_marker.acq  c1_marker_4.4.acq  c1_marker_w3.acq  c1_slow.acq  c1_slow_w3.acq  c1_w3.acq  c2.acq  c2_compressed.acq  c2_w3.acq  c3_rates1.acq  c3_rates1_w3.acq  c3_rates2.acq  c3_rates2_bigcut.acq  c3_rates2_bigcut_w3.acq  c3_rates2_cut.acq  c3_rates2_cut_w3.acq  c3_rates2_w3.acq  c3_rates3_clearall.acq  c3_rates3_clearall_compressed.acq  c3_rates3_clearall_w3.acq
test/: conftest.py  file_groups.py  test_acq2hdf5.py  test_acq2mat.py  test_acq2txt.py  test_acq_info.py  test_acq_layout.py  test_acq_markers.py  test_data_reader.py  test_file_revisions.py  test_reader.py  test_readers.py
test/data/misc/: iso_8859_1.acq  r35_test.acq  r42_test.acq
test/data/nojournal/: nojournal-3.8.1-c.acq  nojournal-3.8.1.acq  nojournal-3.9.1-c.acq  nojournal-3.9.1.acq  nojournal-4.1.0-c.acq  nojournal-4.1.0.acq  nojournal-4.2.0-c.acq  nojournal-4.2.0.acq  nojournal-4.3.0-c.acq  nojournal-4.3.0.acq  nojournal-4.4.0-c.acq  nojournal-4.4.0.acq  nojournal-5.0.1-c.acq  nojournal-5.0.1.acq
test/data/physio/: physio-3.8.1-c.acq  physio-3.8.1.acq  physio-3.9.1-c.acq  physio-3.9.1.acq  physio-4.1.0-c.acq  physio-4.1.0.acq  physio-4.2.0-c.acq  physio-4.2.0.acq  physio-4.3.0-c.acq  physio-4.3.0.acq  physio-4.4.0-c.acq  physio-4.4.0.acq  physio-5.0.1-c.acq  physio-5.0.1.acq
test/data/unicode/: small-unicode-4.4.0.acq
test/fixtures/: journal.html  journal.txt
