[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioread"
version = "3.0.1"
description = "Utilities to read BIOPAC AcqKnowledge files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docopt>=0.6.1",
    "numpy>=2.2.3",
]

[project.optional-dependencies]
mat = [ "scipy" ]
hdf5 = [ "h5py" ]

[project.scripts]
acq_info = "bioread.runners.acq_info:main"

[tool.hatch.version]
path = "bioread/_metadata.py"
