[metadata]
name = bioread
url = http://github.com/njvack/bioread
download_url = http://github.com/njvack/bioread
author = Nate Vack
author_email = njvack@wisc.edu
maintainer = Nate Vack
maintainer_email = njvack@wisc.edu
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Information Analysis
license = GPL 2.0
description = Utilities to read BIOPAC AcqKnowledge files
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    bioread

[options]
python_requires = >=3.6.1
install_requires =
    numpy
    six
    docopt
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
mat = 
    scipy
hdf5 =
    h5py
all =
    %(mat)s
    %(hdf5)s

[options.package_data]
abagen =
    test/data/*

[options.entry_points]
console_scripts =
    acq2mat=bioread.runners.acq2mat:main
    acq2txt=bioread.runners.acq2txt:main
    acq_info=bioread.runners.acq_info:main
    acq_markers=bioread.runners.acq_markers:main
    acq2hdf5=bioread.runners.acq2hdf5:main
